--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,23 +2,27 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"
-    
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      
-      - uses: Platane/snk@master
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Generate Snake
+        uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: 00fr3szuuu
           svg_out_path: dist/github-contribution-grid-snake.svg
-          
-      - uses: crazy-max/ghaction-github-pages@v3
+          svg_out_path_dark: dist/github-contribution-grid-snake-dark.svg
+
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
           target_branch: output
           build_dir: dist
